--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'BhanuRepo'
+        repository: 'final-assessment'
         command: 'buildAndPush'
         Dockerfile: '**/dockerfile'
         tags:  
