--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'BhanuRepo'
-        repository: 'final-assessment'
+        repository: 'finalassessment'
         command: 'buildAndPush'
         Dockerfile: '**/dockerfile'
         tags:  
