--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,8 @@ stages:
     steps:
     - task: Docker@2
       inputs:
-        containerRegistry: 'BhanuRepo'
-        repository: 'finalassessment'
+        containerRegistry: 'final-assessment-acr'
+        repository: 'bhanurepoacr'
         command: 'buildAndPush'
         Dockerfile: '**/dockerfile'
         tags:  
