--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -1,81 +1,39 @@
-trigger:
-- main
-
-variables:
-- name: DEV_ENVIRONMENT
-  value: dev
-- name: QA_ENVIRONMENT
-  value: qa
-
-pool:
-  vmImage: ubuntu-latest
-
-stages:
-- stage: TerraformValidate
-  jobs:
-    - job: TerraformValidateJob
-      continueOnError: false
-      steps:
-     
-      - task: PublishPipelineArtifact@1
-        displayName: Publish Artifacts
-        inputs:
-          targetPath: '$(System.DefaultWorkingDirectory)/Terraform-manifest'
-          artifact: 'Terraform-manifest-out'
-          publishLocation: 'pipeline'
-      - task: TerraformCLI@2
-        displayName: Terraform Init
-        inputs:
-          command: 'init'
-          workingDirectory: '$(System.DefaultWorkingDirectory)/Terraform-manifest'
-          backendType: 'azurerm'
-          backendServiceArm: 'terraform-aks-azurerm-svc-con'
-          backendAzureRmResourceGroupName: 'rg-storage-accounts-1'
-          backendAzureRmStorageAccountName: 'tfstorageaccountbhanu'
-          backendAzureRmContainerName: 'tfstatefiles'
-          backendAzureRmKey: 'tf-cluster.tfstate'
-          allowTelemetryCollection: false
-      - task: TerraformCLI@2
-        displayName: Terraform Validate
-        inputs:
-          command: 'validate'
-          workingDirectory: '$(System.DefaultWorkingDirectory)/Terraform-manifest'
-          allowTelemetryCollection: false
-- stage: DeployAKSCluster
-  jobs:
-    - deployment: DeployDevAksCluster
-      displayName: DeployDevAksCluster
-      pool:
-        vmImage: 'ubuntu-latest'
-      environment: $(DEV_ENVIRONMENT)
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-            
-            - task: TerraformCLI@2
-              displayName: Terraform Init
-              inputs:
-                command: 'init'
-                workingDirectory: '$(Pipeline.Workspace)/Terraform-manifest-out'
-                backendType: 'azurerm'
-                backendServiceArm: 'terraform-aks-azurerm-svc-con'
-                backendAzureRmResourceGroupName: 'rg-storage-accounts-1'
-                backendAzureRmStorageAccountName: 'tfstorageaccountbhanu'
-                backendAzureRmContainerName: 'tfstatefiles'
-                backendAzureRmKey: 'tf-cluster.tfstate'
-                allowTelemetryCollection: false
-            - task: TerraformCLI@2
-              displayName: Terraform Plan
-              inputs:
-                command: 'plan'
-                workingDirectory: '$(Pipeline.Workspace)/Terraform-manifest-out'
-                environmentServiceName: 'terraform-aks-azurerm-svc-con'
-                allowTelemetryCollection: true
-            - task: TerraformCLI@2
-              displayName: Terraform Apply
-              inputs:
-                command: 'apply'
-                workingDirectory: '$(Pipeline.Workspace)/Terraform-manifest-out'
-                environmentServiceName: 'terraform-aks-azurerm-svc-con'
-                allowTelemetryCollection: true
+apiVersion: apps/v1
+kind: Deployment 
+metadata:
+  name: python-app
+  labels:
+    app: python-app
+    tier: frontend
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: python-app
+  template: 
+    metadata:
+      labels: 
+        app: python-app
+        tier: frontend
+    spec: 
+      containers: 
+        - name: python-app
+          image: bhanurepoacr.azurecr.io/bhanurepoacr
+          ports:
+            - containerPort: 5000
+---
+apiVersion: v1
+kind: Service 
+metadata:
+  name: python-service
+  labels:
+    app: python-app
+    tier: frontend  
+spec:
+  type: LoadBalancer 
+  selector:
+    app: python-app
+  ports: 
+    - name: http
+      port: 5000 
+      targetPort: 5000
